[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["忘忧北萱草 <wybxc@qq.com>"]
packages = [{ include = "" }]
license = ""
readme = "README.md"
homepage = ""

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"
pdoc3 = "^0.9.2"
mypy = "^0.910"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
